--- a/templates/home.html
+++ b/templates/home.html
@@ -16,6 +16,7 @@
       async
       defer
     ></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
       
     </style>
@@ -23,16 +24,31 @@
   <body>
     <form method="GET">
       <label for="year">Select Year:</label>
-      <select id="year" name="year" onchange="updateYear()">
+      <select id="year" name="year">
+
+        <option value="2010">2010</option>
+        <option value="2011">2011</option>
+        <option value="2012">2012</option>
         <option value="2013">2013</option>
         <option value="2014">2014</option>
+        <option value="2015">2015</option>
+        <option value="2016">2016</option>
+        <option value="2017">2017</option>
+        <option value="2018">2018</option>
+        <option value="2019">2019</option>
+        <option value="2020">2020</option>
+        <option value="2021">2021</option>
+        <option value="2022">2022</option>
+        <option value="2023">2023</option>
         <!-- Add more options for different years as needed -->
       </select>
       <button type="submit">Update</button>
     </form>
     <div class="flex justify-between">
       <div class=" w-2/4 p-10 h-screen overflow-y-auto bg-[#f8f8fc] rounded-md">
-        <p class=''>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod quam eu tortor congue, quis tincidunt elit fringilla. Nunc et neque vel quam tincidunt facilisis. Nulla facilisi. Praesent hendrerit, quam quis malesuada facilisis, libero libero hendrerit erat, nec efficitur libero odio eu tortor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Maecenas vitae turpis ut elit fermentum lacinia vel non velit. Sed euismod semper sapien, ac venenatis sapien dignissim vel. Pellentesque sodales ullamcorper libero, a tempor urna vehicula ac. Fusce nec erat libero. Fusce congue nunc id ipsum interdum, in laoreet orci dictum. Maecenas eu magna vitae ex tincidunt faucibus id in massa. Vivamus eu rhoncus tortor. Sed eget fermentum quam. Donec eget aliquam nulla, sed consectetur mi. Ut vel viverra libero. Integer ullamcorper orci nec metus ultrices vehicula. Duis consequat odio eget justo sodales, eu cursus elit vehicula.
+        <p class=''>
+          <canvas id="myLineChart"></canvas>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod quam eu tortor congue, quis tincidunt elit fringilla. Nunc et neque vel quam tincidunt facilisis. Nulla facilisi. Praesent hendrerit, quam quis malesuada facilisis, libero libero hendrerit erat, nec efficitur libero odio eu tortor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Maecenas vitae turpis ut elit fermentum lacinia vel non velit. Sed euismod semper sapien, ac venenatis sapien dignissim vel. Pellentesque sodales ullamcorper libero, a tempor urna vehicula ac. Fusce nec erat libero. Fusce congue nunc id ipsum interdum, in laoreet orci dictum. Maecenas eu magna vitae ex tincidunt faucibus id in massa. Vivamus eu rhoncus tortor. Sed eget fermentum quam. Donec eget aliquam nulla, sed consectetur mi. Ut vel viverra libero. Integer ullamcorper orci nec metus ultrices vehicula. Duis consequat odio eget justo sodales, eu cursus elit vehicula.
 
 Proin auctor non risus eu iaculis. Sed bibendum bibendum felis, sit amet euismod est eleifend ut. Vestibulum et odio augue. Etiam cursus arcu sed arcu cursus, quis vehicula turpis bibendum. Vestibulum ut justo ac libero efficitur bibendum. Nulla lacinia, metus a congue euismod, odio elit consectetur tortor, ac luctus odio massa in augue. Sed elementum justo vel tellus euismod bibendum. Suspendisse potenti. Curabitur at justo vel sapien luctus gravida. Sed sed volutpat augue. Maecenas varius, nunc vel aliquet suscipit, lectus odio pharetra est, vel tincidunt quam erat in erat. Integer ultrices, dolor a bibendum scelerisque, metus ex lobortis arcu, nec tincidunt dui lorem at justo. Phasellus eu velit tristique, lacinia est non, efficitur tortor. Nunc et mattis tortor. Cras non enim id sapien congue tempus in sit amet purus.
 
@@ -46,6 +62,7 @@ Fusce ut orci id libero tristique fermentum id a odio. Sed sit amet facilisis ju
       <div class="box-shadow pt-5" id="info-card"></div>
       </div>
       <div class="sticky top-0 h-screen w-[100%]" id="map">
+        
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum, suscipit.
         Quia quam commodi asperiores sint laudantium earum nostrum voluptatibus
         iure repudiandae. Ea ducimus tenetur fuga voluptate eligendi quam
@@ -65,6 +82,7 @@ Fusce ut orci id libero tristique fermentum id a odio. Sed sit amet facilisis ju
         accusantium. Ratione praesentium hic sint rem exercitationem ut
         provident. lorem150
       </div>
+      
 
       
     </div>
@@ -76,6 +94,8 @@ Fusce ut orci id libero tristique fermentum id a odio. Sed sit amet facilisis ju
                                         var coordinatesList = JSON.parse(
                                           "{{ coordinates_list_json|safe|escapejs }}"
                                         );
+                                        console.log("----coordinatesList----")
+                                        lineGraphFromCountries(coordinatesList)
                                         console.log(coordinatesList);
                                         function initMap() {
                                           // New map
@@ -93,6 +113,7 @@ Fusce ut orci id libero tristique fermentum id a odio. Sed sit amet facilisis ju
                                           addUkMarker({ coords: ukraineCoords });
 
                                           // Add Marker Function
+                                          ;
                                           function addMarker(props) {
                                             var marker = new google.maps.Marker({
                                               position: props.coords,
@@ -106,6 +127,7 @@ Fusce ut orci id libero tristique fermentum id a odio. Sed sit amet facilisis ju
                                               var infoWindow = new google.maps.InfoWindow({
                                                 content: props.content,
                                               });
+                                            
 
                                               marker.addListener("click", function () {
                                                 // Update card content
@@ -134,6 +156,7 @@ Fusce ut orci id libero tristique fermentum id a odio. Sed sit amet facilisis ju
                                           // Now fit the map to the newly inclusive bounds
                                           map.fitBounds(bounds);
                                         }
+                                       
 
                                         function updateInfoCard(data) {
                                           console.log(data);
@@ -155,16 +178,24 @@ Fusce ut orci id libero tristique fermentum id a odio. Sed sit amet facilisis ju
                                               <i class="fas fa-female"></i>
                                                
                                             </p>
-                                            <p class="text-3xl">${data.f_total}</p>
+                                            <p class="text-3xl">${Math.round((data.f_total/ (data.f_total + data.m_total))* 100)}%</p>
+
+                                          
                                           </div>
                                           <div class="flex gap-2 items-center border-2 border-blue-500 p-5">
                                             <p class="text-7xl text-gray-500">
                                               <i class="fas fa-male"></i>
                                              
                                             </p>
-                                            <p class="text-3xl"> ${data.m_total}</p>
+                                            <p class="text-3xl"> ${Math.round((data.m_total / (data.f_total + data.m_total))*100)}%</p>
                                           </div>
                                         </div>
+
+                                        <canvas id="myChart"></canvas>
+                                        <canvas id="decChart"></canvas>
+                                        <canvas id="pyChart"></canvas>
+                                        <canvas id="myLineChart"></canvas>
+
                                           
                                           <p>Year: ${data.year}</p>
                                           <p>applied: ${data.applied}</p>
@@ -179,6 +210,107 @@ Fusce ut orci id libero tristique fermentum id a odio. Sed sit amet facilisis ju
                                           <p>procedure type: ${data.coa_name}</p>
                                           <p>procedure type: ${data.coo_name}</p>
                                           `;
+                                          var ctx = document.getElementById("myChart").getContext("2d");
+
+  // Create the data for the chart
+  var chartData = {
+    labels: ["Female", "Male"],
+    datasets: [
+      {
+        label: "Gender Percentage",
+        data: [
+          Math.round((data.f_total / (data.f_total + data.m_total)) * 100),
+          Math.round((data.m_total / (data.f_total + data.m_total)) * 100),
+        ],
+        backgroundColor: ["rgba(255, 99, 132, 0.5)", "rgba(54, 162, 235, 0.5)"],
+        borderColor: ["rgba(255, 99, 132, 1)", "rgba(54, 162, 235, 1)"],
+        borderWidth: 1,
+      },
+    ],
+  };
+
+  // Create and display the chart
+  var myChart = new Chart(ctx, {
+    type: "bar",
+    data: chartData,
+    options: {
+      scales: {
+        y: {
+          beginAtZero: true,
+          max: 100,
+        },
+      },
+    },
+  });
+
+   var ctx = document.getElementById("decChart").getContext("2d");
+
+  // Create the data for the chart
+  var chartData = {
+    labels: ["Decisions rejected", "Decisions recognized", "Decisions closed", "other decisions"],
+    datasets: [
+      {
+        label: "Decision Percentage",
+        data: [
+          Math.round((data.dec_rejected / (data.dec_total)) * 100),
+          Math.round((data.dec_recognized / (data.dec_total)) * 100),
+          Math.round((data.dec_closed / (data.dec_total)) * 100),
+          Math.round(((data.dec_other/ (data.dec_total)) * 100)),
+        ],
+        backgroundColor: ["rgba(255, 99, 132, 0.5)", "rgba(54, 162, 235, 0.5)", "rgba(255, 206, 86, 0.5)", "rgba(75, 192, 192, 0.5)"],
+        borderColor: ["rgba(255, 99, 132, 1)", "rgba(54, 162, 235, 1)", "rgba(255, 206, 86, 1)", "rgba(75, 192, 192, 1)"],
+        borderWidth: 1,
+      },
+    ],
+  };
+
+  // Create and display the chart
+  var myChart = new Chart(ctx, {
+    type: "bar",
+    data: chartData,
+    options: {
+      scales: {
+        y: {
+          beginAtZero: true,
+          max: 100,
+        },
+      },
+    },
+  });
+   var ctx = document.getElementById("pyChart").getContext("2d");
+
+  // Create the data for the chart
+  var chartData = {
+    labels: ["Female", "Male"],
+    datasets: [
+      {
+        data: [
+          Math.round((data.f_total / (data.f_total + data.m_total)) * 100),
+          Math.round((data.m_total / (data.f_total + data.m_total)) * 100),
+        ],
+        backgroundColor: ["rgba(255, 99, 132, 0.5)", "rgba(54, 162, 235, 0.5)"],
+        borderColor: ["rgba(255, 99, 132, 1)", "rgba(54, 162, 235, 1)"],
+        borderWidth: 1,
+      },
+    ],
+  };
+
+  // Create and display the chart as a pie chart
+  var pyChart = new Chart(ctx, {
+    type: "pie",
+    data: chartData,
+    options: {
+      plugins: {
+        legend: {
+          display: true,
+          position: "right", // You can adjust the legend position
+        },
+      },
+    },
+  });
+
+ 
+
                                         }
                                         var currentLine = null;
                                       function drawLineToUkraine(coaCoords) {
@@ -248,6 +380,8 @@ Fusce ut orci id libero tristique fermentum id a odio. Sed sit amet facilisis ju
         // Redirect to the updated URL
         window.location.href = updatedUrl;
       }
+
+       
     </script>
   </body>
 </html>
