--- a/templates/home.html
+++ b/templates/home.html
@@ -46,8 +46,27 @@
     </form>
     <div class="flex justify-between">
       <div class=" w-2/4 p-10 h-screen overflow-y-auto bg-[#f8f8fc] rounded-md">
-        <p class=''>
-          <canvas id="myLineChart"></canvas>
+        <div>
+            <button id="infoBtn1" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" onclick="showInfoContent1()">Info1</button>
+<button id="infoBtn2" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" onclick="showInfoContent2()">Info2</button>
+          </div>
+        
+          {% comment %} <canvas id="myLineChart"></canvas> {% endcomment %}
+          <div id="infoContent1">
+          <div class="box-shadow pt-5" id="info-card"></div>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod quam eu tortor congue, quis tincidunt elit fringilla. Nunc et neque vel quam tincidunt facilisis. Nulla facilisi. Praesent hendrerit, quam quis malesuada facilisis, libero libero hendrerit erat, nec efficitur libero odio eu tortor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Maecenas vitae turpis ut elit fermentum lacinia vel non velit. Sed euismod semper sapien, ac venenatis sapien dignissim vel. Pellentesque sodales ullamcorper libero, a tempor urna vehicula ac. Fusce nec erat libero. Fusce congue nunc id ipsum interdum, in laoreet orci dictum. Maecenas eu magna vitae ex tincidunt faucibus id in massa. Vivamus eu rhoncus tortor. Sed eget fermentum quam. Donec eget aliquam nulla, sed consectetur mi. Ut vel viverra libero. Integer ullamcorper orci nec metus ultrices vehicula. Duis consequat odio eget justo sodales, eu cursus elit vehicula.
+
+Proin auctor non risus eu iaculis. Sed bibendum bibendum felis, sit amet euismod est eleifend ut. Vestibulum et odio augue. Etiam cursus arcu sed arcu cursus, quis vehicula turpis bibendum. Vestibulum ut justo ac libero efficitur bibendum. Nulla lacinia, metus a congue euismod, odio elit consectetur tortor, ac luctus odio massa in augue. Sed elementum justo vel tellus euismod bibendum. Suspendisse potenti. Curabitur at justo vel sapien luctus gravida. Sed sed volutpat augue. Maecenas varius, nunc vel aliquet suscipit, lectus odio pharetra est, vel tincidunt quam erat in erat. Integer ultrices, dolor a bibendum scelerisque, metus ex lobortis arcu, nec tincidunt dui lorem at justo. Phasellus eu velit tristique, lacinia est non, efficitur tortor. Nunc et mattis tortor. Cras non enim id sapien congue tempus in sit amet purus.
+
+Vivamus non congue tellus. Integer volutpat justo nec sapien lacinia, quis condimentum justo sodales. Sed malesuada euismod libero, eu efficitur felis rhoncus id. Suspendisse potenti. Suspendisse potenti. Sed non dui id tortor eleifend ultrices. Etiam tincidunt libero vel lacus fringilla, ac venenatis metus aliquet. Vestibulum viverra, justo sit amet eleifend sagittis, urna leo elementum leo, nec viverra purus est ut felis. Nullam congue ac eros vel rhoncus. Sed vitae justo nec odio commodo facilisis. Vivamus nec sapien justo. Curabitur ullamcorper varius turpis, a lacinia lorem volutpat a. Fusce eu nunc vel felis congue hendrerit. Duis in hendrerit turpis.
+
+Praesent malesuada, odio vel luctus euismod, sapien tellus efficitur lectus, non blandit lorem velit ut ex. Sed quis justo eu purus egestas venenatis ac sit amet sapien. Proin at vestibulum justo. Nam non nisl id libero hendrerit dignissim. Ut auctor, nunc sit amet vehicula tristique, nunc libero gravida justo, et fermentum arcu odio eget nulla. Vestibulum id sem et orci semper vehicula. Sed a tincidunt urna. Sed venenatis scelerisque nisl at feugiat. Curabitur tincidunt feugiat felis, vel hendrerit eros. Sed non libero non ex dictum ultrices. Nullam interdum ex ac libero bibendum, id suscipit dolor rhoncus. Integer vel varius erat. In viverra felis non mi dignissim blandit.
+
+Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Vivamus id nunc et libero interdum accumsan. Sed varius arcu ac libero mattis, id volutpat ex eleifend. Proin id tristique dui. Etiam tristique odio ac efficitur auctor. Nam sed lacinia justo. Fusce nec quam non ipsum facilisis fermentum in non sem. Ut ut rutrum est. Aenean commodo vestibulum massa, a varius velit fermentum eget. Integer quis nisl in erat volutpat consequat. Aenean vitae ex nunc. Nulla facilisi. Integer eu nunc a metus lacinia euismod. Maecenas volutpat fermentum sapien eget fringilla.
+
+Fusce ut orci id libero tristique fermentum id a odio. Sed sit amet facilisis justo. Pellentesque eu odio nec elit euismod interdum a eget ligula. Nullam eu elit vel risus dignissim euismod. Fusce condimentum, lectus id cursus venenatis, felis massa maximus nulla, in fermentum quam sem vitae ligula. Vestibulum dictum orci eu diam feugiat, in interdum ante blandit. Nam ut lectus vitae ligula ultricies interdum eget ac nulla. Curabitur vehicula euismod turpis eu fermentum. In hac habitasse platea dictumst. Cras a mauris sit amet nunc placerat dapibus. Vestibulum in purus sem. Phasellus in dapibus libero, ac finibus quam. Nullam vestibulum risus eget eleifend tristique. Integer dignissim libero in nibh cursus, non eleifend libero egestas. In consectetur, justo eget suscipit egestas, nunc purus dignissim augue, non tincidunt turpis quam eu turpis. In hac habitasse platea dictumst.</div>
+ <p id="infoContent2">
+        hgjkl;''
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod quam eu tortor congue, quis tincidunt elit fringilla. Nunc et neque vel quam tincidunt facilisis. Nulla facilisi. Praesent hendrerit, quam quis malesuada facilisis, libero libero hendrerit erat, nec efficitur libero odio eu tortor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Maecenas vitae turpis ut elit fermentum lacinia vel non velit. Sed euismod semper sapien, ac venenatis sapien dignissim vel. Pellentesque sodales ullamcorper libero, a tempor urna vehicula ac. Fusce nec erat libero. Fusce congue nunc id ipsum interdum, in laoreet orci dictum. Maecenas eu magna vitae ex tincidunt faucibus id in massa. Vivamus eu rhoncus tortor. Sed eget fermentum quam. Donec eget aliquam nulla, sed consectetur mi. Ut vel viverra libero. Integer ullamcorper orci nec metus ultrices vehicula. Duis consequat odio eget justo sodales, eu cursus elit vehicula.
 
 Proin auctor non risus eu iaculis. Sed bibendum bibendum felis, sit amet euismod est eleifend ut. Vestibulum et odio augue. Etiam cursus arcu sed arcu cursus, quis vehicula turpis bibendum. Vestibulum ut justo ac libero efficitur bibendum. Nulla lacinia, metus a congue euismod, odio elit consectetur tortor, ac luctus odio massa in augue. Sed elementum justo vel tellus euismod bibendum. Suspendisse potenti. Curabitur at justo vel sapien luctus gravida. Sed sed volutpat augue. Maecenas varius, nunc vel aliquet suscipit, lectus odio pharetra est, vel tincidunt quam erat in erat. Integer ultrices, dolor a bibendum scelerisque, metus ex lobortis arcu, nec tincidunt dui lorem at justo. Phasellus eu velit tristique, lacinia est non, efficitur tortor. Nunc et mattis tortor. Cras non enim id sapien congue tempus in sit amet purus.
@@ -59,28 +78,9 @@ Praesent malesuada, odio vel luctus euismod, sapien tellus efficitur lectus, non
 Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Vivamus id nunc et libero interdum accumsan. Sed varius arcu ac libero mattis, id volutpat ex eleifend. Proin id tristique dui. Etiam tristique odio ac efficitur auctor. Nam sed lacinia justo. Fusce nec quam non ipsum facilisis fermentum in non sem. Ut ut rutrum est. Aenean commodo vestibulum massa, a varius velit fermentum eget. Integer quis nisl in erat volutpat consequat. Aenean vitae ex nunc. Nulla facilisi. Integer eu nunc a metus lacinia euismod. Maecenas volutpat fermentum sapien eget fringilla.
 
 Fusce ut orci id libero tristique fermentum id a odio. Sed sit amet facilisis justo. Pellentesque eu odio nec elit euismod interdum a eget ligula. Nullam eu elit vel risus dignissim euismod. Fusce condimentum, lectus id cursus venenatis, felis massa maximus nulla, in fermentum quam sem vitae ligula. Vestibulum dictum orci eu diam feugiat, in interdum ante blandit. Nam ut lectus vitae ligula ultricies interdum eget ac nulla. Curabitur vehicula euismod turpis eu fermentum. In hac habitasse platea dictumst. Cras a mauris sit amet nunc placerat dapibus. Vestibulum in purus sem. Phasellus in dapibus libero, ac finibus quam. Nullam vestibulum risus eget eleifend tristique. Integer dignissim libero in nibh cursus, non eleifend libero egestas. In consectetur, justo eget suscipit egestas, nunc purus dignissim augue, non tincidunt turpis quam eu turpis. In hac habitasse platea dictumst.</p>
-      <div class="box-shadow pt-5" id="info-card"></div>
       </div>
       <div class="sticky top-0 h-screen w-[100%]" id="map">
-        
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum, suscipit.
-        Quia quam commodi asperiores sint laudantium earum nostrum voluptatibus
-        iure repudiandae. Ea ducimus tenetur fuga voluptate eligendi quam
-        aliquam sit ipsa, quo odio assumenda inventore vero totam adipisci
-        fugiat aliquid aperiam quas vitae nulla temporibus dolorem. Veniam non
-        suscipit rem Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        Accusantium fugit numquam quisquam tempore qui? Laborum id
-        exercitationem natus nisi, quibusdam eaque, recusandae fuga tempore
-        error iure facere accusantium beatae, nesciunt nihil perferendis
-        praesentium porro alias. Dolorum voluptate eaque possimus quam
-        cupiditate, fuga iure vel non distinctio repellendus placeat numquam
-        aspernatur fugiat voluptatum? Enim atque, accusantium totam ex minus
-        quaerat impedit, quia aut maiores maxime facilis odit soluta! Ab
-        laudantium non expedita molestiae magni asperiores, repudiandae
-        exercitationem debitis quaerat provident aut, quae numquam. Incidunt
-        molestias eaque cupiditate totam cumque necessitatibus, id ipsum
-        accusantium. Ratione praesentium hic sint rem exercitationem ut
-        provident. lorem150
+      
       </div>
       
 
@@ -133,6 +133,7 @@ Fusce ut orci id libero tristique fermentum id a odio. Sed sit amet facilisis ju
                                                 // Update card content
                                                 updateInfoCard(props.card_data);
                                                 drawLineToUkraine(props.coords);
+                                                showInfoContent1();
                                               });
                                             }
 
@@ -380,6 +381,36 @@ Fusce ut orci id libero tristique fermentum id a odio. Sed sit amet facilisis ju
         // Redirect to the updated URL
         window.location.href = updatedUrl;
       }
+
+    function showInfoContent1() {
+        let infoContent1 = document.getElementById("infoContent1");
+        let infoContent2 = document.getElementById("infoContent2");
+
+        let infoBtn1 = document.getElementById("infoBtn1");
+        let infoBtn2 = document.getElementById("infoBtn2");
+        
+        infoContent2.classList.add("hidden");
+        infoContent1.classList.remove("hidden");
+        infoBtn1.classList.add("bg-red-500");
+        infoBtn2.classList.remove("bg-red-500");
+
+
+    }
+
+    function showInfoContent2() {
+        let infoContent1 = document.getElementById("infoContent1");
+        let infoContent2 = document.getElementById("infoContent2");
+
+        let infoBtn1 = document.getElementById("infoBtn1");
+        let infoBtn2 = document.getElementById("infoBtn2");
+        
+        infoContent1.classList.add("hidden");
+        infoContent2.classList.remove("hidden");
+        infoBtn2.classList.add("bg-red-500");
+        infoBtn1.classList.remove("bg-red-500");
+
+    }
+
 
        
     </script>
