--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -4,101 +4,64 @@
   <div
     class="flex justify-between items-center w-full h-full md:px-4 py-4 px-2 2xl:px-16 rounded"
   >
-    <div class="">
-      <a class="text-[#eee] font-bold text-3xl font-allura" href="">Umate</a>
+    <div class="flex gap-3 items-center py-2">
+      <img
+        class="w-16 h-16"
+        src="{% static 'images/logo.png' %}"
+        alt="logo"
+      />
+      
+      <a class="text-[#eee] font-bold text-3xl font-allura uppercase" href="">Uate</a>
     </div>
     <div>
       <ul class="hidden md:flex font-barlow" style="color: #ecf0f3">
         <li
-          class="ml-10 font-medium text-[#eee] uppercase text-sm hover:text-[#cda873] hover:scale-105 transition-colors duration-300"
+          class="ml-10 font-bold text-[#eee] uppercase text-xl hover:scale-105 transition-colors duration-300"
         >
-          <a href="">Marketplace</a>
+          <a href="">Ukrainian Asylum Tracking in Europe</a>
         </li>
 
-        {% comment %} {% if user.is_authenticated %} {% endcomment %}
-        <li class="ml-10">
-          <a
-            class="relative font-medium text-[#eee] uppercase text-sm hover:text-[#cda873] hover:scale-105 transition-colors duration-300"
-            href=""
-          >
-            <i class="fa fa-shopping-cart text-white text-2xl"></i>
-            <div
-              class="bg-red-500 text-white rounded-full w-5 h-5 text-center absolute -top-2 -right-2"
-            >
-              <span id="cart-counter">{{cart_count}}</span>
-            </div>
-          </a>
-        </li>
-        {% comment %}
-        <li
-          class="ml-10 font-medium text-[#eee] uppercase text-sm hover:text-[#cda873] hover:scale-105 transition-all duration-all hover:border-y-black"
-        >
-          <a href="">My account</a>
-        </li>
-
-        {% endif %} {% endcomment %} {% comment %}
-        <li class="ml-10 font-medium text-[#eee] uppercase text-sm">
-          {% if user.is_authenticated %}
-          <a
-            class="px-2 py-1 hover:text-[#cda873] hover:scale-105 transition-all duration-all rounded-md font-medium"
-            href=""
-          >
-            Logout
-          </a>
-          {% else %}
-          <a>
-            <span
-              class="px-2 py-1 hover:text-[#cda873] hover:scale-105 transition-all duration-all rounded-md font-medium"
-            >
-              <a href="{% url 'register-user' %}">Register </a>
-            </span>
-
-            <span
-              class="px-2 py-1 hover:text-[#cda873] hover:scale-105 transition-all duration-all rounded-md text-[#fff] font-medium"
-            >
-              <a href="{% url 'login' %}">Login</a>
-            </span>
-          </a>
-          {% endif %}
-        </li>
-        {% endcomment %}
       </ul>
-      <div
+     
+    </div>
+     <div
         id="mobileMenuIcon"
-        class="md:hidden flex justify-between items-center w-full h-full"
+        class="uppercase hover:text-[#cda873] hover:scale-105 transition-all duration-all cursor-pointer text-xl font-bold font-barlow"
         style="color: #ecf0f3"
       >
-        <i class="fa fa-bars text-[#fff] text-3xl"></i>
+        data 
       </div>
-    </div>
-    <div class="hidden md:block">
-      <div>
-        <button
-          class="uppercase text-[#000] font-light font-barlow bg-[#fff] px-4 py-2 hover:bg-[#cda873] transition-all duration-300"
-        >
-          <a href="">Register Restaurant</a>
-        </button>
-      </div>
-    </div>
+   
   </div>
 
   <div
     id="mobileMenu"
-    class="md:hidden fixed left-0 top-0 w-full h-screen bg-black/95 hidden"
+    class="fixed right-0 top-0 h-screen w-1/4 bg-gray-800 z-[1000] hidden"
   >
     <div>
       <div class="flex justify-between items-center w-full mt-3 px-3">
-        <a class="text-[#eee] font-bold text-3xl font-allura" href="">
-          UMATE
-        </a>
         <div id="close-icon" class="cursor-pointer text-[#fff] text-3xl">
           <i class="fa fa-times"></i>
         </div>
       </div>
     </div>
     <div>
-      <div class="flex flex-col items-center text-[#fff] font-barlow py-4">
+      <div class="flex flex-col justify-center items-center text-[#fff] font-barlow py-4">
         <ul>
+          <li class="ml-3 mt-10 text-xl text-[#fff] uppercase">
+            <a href="" onmouseover="showInfo()" onmouseout="hideInfo()">WFS</a>
+          </li>
+          <div id="dataInfo" class="hidden absolute right-52 top-20 bg-gray-700 text-white p-4 w-64">
+        <!-- Add your information content here -->
+        Information about Data...
+    </div>
+          <li class="ml-3 mt-10 text-xl text-[#fff] uppercase">
+            <a href="" onmouseover="showExcel()" onmouseout="hideExcel()">Excel</a>
+          </li>
+          <div id="excelInfo" class="hidden absolute right-52 top-36 bg-gray-700 text-white p-4 w-64">
+        <!-- Add your information content here -->
+        Information about Data...
+    </div>
           {% comment %} {% if user.is_authenticated %}
           <li class="ml-3 mt-10 text-xl uppercase">
             <a href="">My account</a>
@@ -113,7 +76,7 @@
             </a>
           </li>
           {% else %} {% endcomment %}
-          <li class="ml-3 mt-10 text-xl uppercase">
+          {% comment %} <li class="ml-3 mt-10 text-xl uppercase">
             <a class="flex flex-col">
               <span
                 class="py-1 hover:text-[#cda873] hover:scale-105 transition-all duration-all rounded-md font-medium"
@@ -127,7 +90,7 @@
                 <a href="">Login</a>
               </span>
             </a>
-          </li>
+          </li> {% endcomment %}
         </ul>
       </div>
     </div>
@@ -150,6 +113,48 @@
     const closeIcon = document.getElementById("close-icon");
     mobileMenuIcon.addEventListener("click", handleMobileNav);
     closeIcon.addEventListener("click", handleMobileNav);
+
+     let infoTimeout;
+
+function showInfo() {
+    clearTimeout(infoTimeout); // Clear any existing timeout
+    document.getElementById('dataInfo').classList.remove('hidden');
+}
+
+function scheduleHideInfo() {
+    // Schedule the hiding, allows time for the user to move the mouse to the info window
+    infoTimeout = setTimeout(hideInfo, 500);
+}
+
+function hideInfo() {
+    if (!document.getElementById('dataInfo').matches(':hover')) {
+        // Only hide if the user is not hovering over the info window
+        document.getElementById('dataInfo').classList.add('hidden');
+    }
+}
+
+document.getElementById('dataInfo').addEventListener('mouseleave', scheduleHideInfo);
+
+let excelTimeout;
+
+function showExcel() {
+    clearTimeout(excelTimeout); // Clear any existing timeout
+    document.getElementById('excelInfo').classList.remove('hidden');
+}
+
+function scheduleHideExcel() {
+    // Schedule the hiding, allows time for the user to move the mouse to the info window
+    infoTimeout = setTimeout(hideExcel, 500);
+}
+
+function hideExcel() {
+    if (!document.getElementById('excelInfo').matches(':hover')) {
+        // Only hide if the user is not hovering over the info window
+        document.getElementById('excelInfo').classList.add('hidden');
+    }
+}
+
+document.getElementById('excelInfo').addEventListener('mouseleave', scheduleHideExcel);
 
 
     {% comment %} function getLocation() {
