--- a/templates/home.html
+++ b/templates/home.html
@@ -23,13 +23,10 @@
     <form
       id="yearForm"
       method="GET"
-      class="mx-auto my-3 font-semibold text-xl w-[32%]"
+      class="mx-auto my-3 font-semibold text-xl w-[50%] md:w-[32%]"
     >
       <label for="year">Year:</label>
       <select id="year" name="year">
-        <option value="2010">2010</option>
-        <option value="2011">2011</option>
-        <option value="2012">2012</option>
         <option value="2013">2013</option>
         <option value="2014">2014</option>
         <option value="2015">2015</option>
@@ -43,8 +40,10 @@
         <!-- Add more options for different years as needed -->
       </select>
     </form>
-    <div class="flex justify-between">
-      <div class="w-2/4 p-10 h-screen overflow-y-auto bg-[#f8f8fc] rounded-md">
+    <div class="flex md:flex-row flex-col justify-between">
+      <div
+        class="md:w-2/4 p-10 h-screen overflow-y-auto bg-[#f8f8fc] rounded-md"
+      >
         <div>
           <p id="selectedYear" class="my-3">
             Selected Year: <span id="displayYear"></span>
@@ -225,7 +224,7 @@
 
 
 
-                                               
+
 
                                                               let applications = data.applied;
                                                               if (applications==null) {
@@ -239,7 +238,7 @@
                                                             <p class="font-medium text-blue-500 text-2xl">${data.year}</p>
                                                             <div class="h-[2px] bg-blue-500 mt-3 w-[100%]"></div>
 
-                                                          
+
                                                             <div class="flex gap-5 items-center mt-3">
                                                               <h2 class="text-blue-500 text-4xl">${applications}<h2>
                                                               <p class="text-2xl">applications</p>
@@ -421,8 +420,8 @@
 
                           infoContent2.classList.add("hidden");
                           infoContent1.classList.remove("hidden");
-                          infoBtn1.classList.add("bg-red-500");
-                          infoBtn2.classList.remove("bg-red-500");
+                          infoBtn1.classList.add("bg-[#1f2a38]");
+                          infoBtn2.classList.remove("bg-[#1f2a38]");
 
 
                       }
@@ -436,8 +435,8 @@
 
                           infoContent1.classList.add("hidden");
                           infoContent2.classList.remove("hidden");
-                          infoBtn2.classList.add("bg-red-500");
-                          infoBtn1.classList.remove("bg-red-500");
+                          infoBtn2.classList.add("bg-[#1f2a38]");
+                          infoBtn1.classList.remove("bg-[#1f2a38]");
 
                         showSummary();
 
@@ -573,8 +572,8 @@
 
                           infoContent1.classList.add("hidden");
                           infoContent2.classList.remove("hidden");
-                          infoBtn2.classList.add("bg-red-500");
-                          infoBtn1.classList.remove("bg-red-500");
+                          infoBtn2.classList.add("bg-[#1f2a38]");
+                          infoBtn1.classList.remove("bg-[#1f2a38]");
                           var yearSelect = document.getElementById("year");
               var displayYear = document.getElementById("displayYear");
 
